--- a/maven/impl-maven/pom.xml
+++ b/maven/impl-maven/pom.xml
@@ -14,8 +14,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <!-- Artifact Configuration -->
-    <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
-    <name>ShrinkWrap Resolver Maven Implementation</name>
+    <artifactId>fasten-shrinkwrap-resolver-impl-maven</artifactId>
+    <name>ShrinkWrap Resolver Maven Implementation (FASTEN version)</name>
     <description>Implementation for Resolving Dependencies from a Maven Backend</description>
 
     <!-- Properties -->
