--- a/pom.xml
+++ b/pom.xml
@@ -344,4 +344,12 @@
         </plugins>
     </reporting>
 
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub: proksch/shrinkwrap-resolver</name>
+			<url>https://maven.pkg.github.com/proksch/shrinkwrap-resolver</url>
+		</repository>
+	</distributionManagement>
+
 </project>
